--- a/prometheus.yml
+++ b/prometheus.yml
@@ -28,7 +28,11 @@ scrape_configs:
     static_configs:
     - targets: ['localhost:9090']
   
-  - job_name: 'node_exporter'
+  - job_name: 'apache+prometheus'
     scrape_interval: 5s
     static_configs:
       - targets: ['localhost:9100']
+  - job_name: 'apache+wordpress+sql_master'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['192.168.100.199:9100']
