--- a/prometheus.yml
+++ b/prometheus.yml
@@ -39,4 +39,7 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['192.168.100.201:9100']
-
+  - job_name: 'ELK'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['192.168.100.203:9100']
